cluster/kubernetes/arch-mirror/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: arch-mirror
  name: pacoloco-direct
  annotations:
    svccontroller.k3s.cattle.io/tolerations: |
      - key: "group"
        operator: "Equal"
        value: "arm64perf"
        effect: "NoSchedule"
      - key: "group"
        operator: "Equal"
        value: "external"
        effect: "NoSchedule"
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9129
  selector:
    app: pacoloco
---
apiVersion: v1
kind: Service
metadata:
  namespace: arch-mirror
  name: pacoloco
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9129
  selector:
    app: pacoloco
