cluster/kubernetes/arch-mirror/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch-mirror
  namespace: arch-mirror
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: arch-mirror.anurag.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pacoloco
                port:
                  number: 80
  tls:
    - secretName: arch-mirror-internal-tls
      hosts:
        - arch-mirror.anurag.sh
